updated actionbar color

--- a/src/App.css
+++ b/src/App.css
@@ -392,7 +392,7 @@ body:has(.dark-background-transparent) {
 }
 
 .light-background {
-  background-color: rgb(218, 218, 218);
+  background-color: #f1f3f4;
   color: black;
   transition: background-color .3s ease-out;
   border: 0.2px #ccc solid;
@@ -407,7 +407,7 @@ body:has(.dark-background-transparent) {
 }
 
 .dark-background {
-  background-color: rgb(71, 71, 71);
+  background-color: #283142;
   color: white;
   transition: background-color .3s ease-out;
   border: 0.2px #6f6f6f solid;
@@ -535,9 +535,30 @@ body:has(.dark-background-transparent) {
   text-align: center;
 }
 
+.color-1 {
+  background-color: #ffabd8;
+}
+
+.color-2 {
+  background-color: #ffd19b;
+}
+
+.color-3 {
+  background-color: #0871c6;
+}
+
+.color-4 {
+  background-color: #07c598;
+}
+
+.color-5 {
+  background-color: #ff925d;
+}
+
 .action-bar {
   border: none !important;
   box-shadow: rgba(33, 35, 38, 0.1) 0px 10px 10px -10px;
+  transition: background-color 0.3s ease-in-out;
 }
 
 .action-bar.dark-background {
@@ -852,10 +873,64 @@ body:has(.dark-background-transparent) {
   margin-left: 10px;
 }
 
-.dark-background .application-devider, .dark-background-transparent .application-devider {
+.dark-background .application-devider,
+.dark-background-transparent .application-devider {
   border-left: 1px solid #ccc;
 }
 
-.light-background .application-devider, .light-background-transparent .application-devider {
+.light-background .application-devider,
+.light-background-transparent .application-devider {
   border-left: 1px solid #494949;
+}
+
+.color-section {
+  border-radius: 10px;
+  box-shadow: rgba(0, 0, 0, 0.25) 0px 0.0625em 0.0625em, rgba(0, 0, 0, 0.25) 0px 0.125em 0.5em, rgba(255, 255, 255, 0.1) 0px 0px 0px 1px inset;
+  padding: 5px;
+  margin-top: 5px;
+}
+
+.dark-background .color-section,
+.dark-background-transparent .color-section {
+  box-shadow: rgba(255, 255, 255, 0.25) 0px 0.0625em 0.0625em, rgba(255, 255, 255, 0.25) 0px 0.125em 0.5em, rgba(0, 0, 0, 0.1) 0px 0px 0px 1px inset;
+}
+
+.color-section>.text {
+  width: 100%;
+  text-align: center;
+}
+
+.color-select-section {
+  margin-top: 5px;
+  min-height: 30px;
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.color-select-section>.color-panel:first-child {
+  border-top-left-radius: 10px;
+  border-bottom-left-radius: 10px;
+}
+
+.color-select-section>.color-panel:last-child {
+  border-top-right-radius: 10px;
+  border-bottom-right-radius: 10px;
+}
+
+.color-panel {
+  z-index: 1;
+  min-height: 30px;
+  width: 100%;
+  cursor: pointer;
+  transition: width 0.3s ease-in-out;
+}
+
+.color-panel:hover {
+  width: 3000px;
+}
+
+.current-color-panel {
+  border: 2px solid rgb(22 119 255);
 }
