--- a/src/App.css
+++ b/src/App.css
@@ -833,7 +833,7 @@ body:has(.dark-background-transparent) {
   min-width: 50px;
   border: none;
   cursor: pointer;
-  position: relative;
+  padding: 0;
   box-shadow: inset 0 2px 4px 0 rgba(0, 0, 0, 0.05);
   transition: background-color 0.2s ease-in-out;
 }
@@ -847,9 +847,9 @@ body:has(.dark-background-transparent) {
 }
 
 .switch-lever {
-  position: absolute;
-  min-width: 20px;
-  min-height: 20px;
+  margin: 3px;
+  width: 20px;
+  height: 20px;
   border-radius: 50%;
   background-color: #ffffff;
   transition: all 0.3s ease-in-out;
@@ -857,13 +857,11 @@ body:has(.dark-background-transparent) {
 }
 
 .switch-lever-active {
-  margin-left: 41%;
-  top: 3px;
+  margin-left: 27px;
 }
 
 .switch-lever-inactive {
-  margin-left: -6%;
-  top: 3px;
+  margin-left: 3px;
 }
 
 .settings {
