--- a/src/App.css
+++ b/src/App.css
@@ -570,6 +570,12 @@ body:has(.dark-background-transparent) {
   transition: background-color 0.3s ease-in-out;
 }
 
+.drag-area {
+  width: 100%;
+  height: 35px;
+  cursor: move;
+}
+
 .action-bar.dark-background {
   box-shadow: rgba(255, 255, 255, 0.334) 0px 10px 10px -10px;
   border-bottom: 0.7px solid #ccc;
