--- a/src/App.css
+++ b/src/App.css
@@ -63,10 +63,8 @@ body:has(.dark-background-transparent) {
 
 .info {
   box-shadow: inset 0 2px 4px 0 rgba(0, 0, 0, 0.05);
-  margin-left: 20px;
-  margin-right: 20px;
+  margin: 10px;
   padding: 0.5rem;
-  margin-bottom: 20px;
 }
 
 .taskbar {
