--- a/src/App.css
+++ b/src/App.css
@@ -572,6 +572,10 @@ body:has(.dark-background-transparent) {
   width: 100%;
   height: 35px;
   cursor: move;
+  display: flex;
+  flex-wrap: nowrap;
+  align-items: center;
+  font-weight: bold;
 }
 
 .action-bar.dark-background {
