--- a/src/styles.css
+++ b/src/styles.css
@@ -81,10 +81,15 @@ body {
   box-shadow: 0 22px 70px 4px rgba(0, 0, 0, 0.56);
 }
 
+.window-content {
+  overflow: auto;
+  height: 100%;
+  padding: 10px;
+}
+
 .info {
   box-shadow: inset 0 2px 4px 0 rgba(0, 0, 0, 0.05);
-  margin: 10px;
-  padding: 0.5rem;
+  padding: 10px;
 }
 
 .taskbar {
@@ -382,6 +387,7 @@ body {
 
   .main-settings {
     max-width: 100% !important;
+    margin-bottom: 10px;
   }
 
   .setting-content {
@@ -445,7 +451,6 @@ body {
   color: black;
   transition: background-color .3s ease-out;
   border: 0.2px #ccc solid;
-  backdrop-filter: blur(30px);
 }
 
 .dark-background {
@@ -460,7 +465,6 @@ body {
   color: white;
   transition: background-color .3s ease-out;
   border: 0.2px #6f6f6f solid;
-  backdrop-filter: blur(30px);
 }
 
 .m-1 {
@@ -885,9 +889,18 @@ body {
   border: none;
   cursor: pointer;
   padding: 0;
-  box-shadow: inset 0 2px 4px 0 rgba(0, 0, 0, 0.05);
+  /* box-shadow: inset 0 2px 4px 0 rgba(0, 0, 0, 0.05); */
+  box-shadow: 0 0 5px 0.5px rgba(0,0,0,0.2) inset;
   transition: background-color 0.2s ease-in-out;
   position: relative;
+}
+
+.switch:has(.switch-lever-inactive):hover {
+  background-color: rgb(165, 165, 165) !important;
+}
+
+.switch:has(.switch-lever-active):hover {
+  background-color: rgb(81, 153, 255) !important;
 }
 
 .switch.disabled {
@@ -992,6 +1005,7 @@ body {
 
 .setting-content {
   display: flex;
+  gap: 10px;
 }
 
 .main-settings {
@@ -1255,11 +1269,20 @@ body {
 }
 
 .modal-timing {
-  font-size: 20px;
+  font-weight: bolder;
+  border-radius: 8px;
+  color: #FA541C;
+  background-color: rgb(253, 227, 207, 0.5);
+  width: 100%;
+  max-width: fit-content;
+  min-width: 25px;
+  height: 100%;
+  padding: 2.5px;
 }
 
 .profile {
   display: flex;
+  gap: 10px;
   flex-wrap: wrap;
   flex-direction: row-reverse;
   margin: auto;
@@ -1362,4 +1385,14 @@ h1.summary-title {
 .my-cv {
   text-align: center;
   width: 100%;
+  margin-bottom: 10px;
+}
+
+.timer {
+  width: 100%;
+  height: 100%;
+  text-align: center;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
