--- a/src/styles.css
+++ b/src/styles.css
@@ -65,12 +65,6 @@ body {
   height: 100%;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
 .content {
   /* box-shadow:
     0 1px 1px hsl(0deg 0% 0% / 0.075),
@@ -78,7 +72,22 @@ body {
     0 4px 4px hsl(0deg 0% 0% / 0.075),
     0 8px 8px hsl(0deg 0% 0% / 0.075),
     0 16px 16px hsl(0deg 0% 0% / 0.075); */
-  box-shadow: 0 22px 70px 4px rgba(0, 0, 0, 0.56);
+    box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
+  border: 0.2px #6f6f6f solid;
+}
+
+.mobile-content {
+  /* box-shadow:
+    0 1px 1px hsl(0deg 0% 0% / 0.075),
+    0 2px 2px hsl(0deg 0% 0% / 0.075),
+    0 4px 4px hsl(0deg 0% 0% / 0.075),
+    0 8px 8px hsl(0deg 0% 0% / 0.075),
+    0 16px 16px hsl(0deg 0% 0% / 0.075); */
+    box-shadow: rgba(14, 30, 37, 0.12) 0px 2px 4px 0px, rgba(14, 30, 37, 0.32) 0px 2px 16px 0px;
+}
+
+.mobile-content.dark-background-transparent {
+  box-shadow: rgba(255, 255, 255, 0.205) 0px 2px 4px 0px, rgba(14, 30, 37, 0.32) 0px 2px 16px 0px;
 }
 
 .window-content {
@@ -90,6 +99,7 @@ body {
 .info {
   box-shadow: inset 0 2px 4px 0 rgba(0, 0, 0, 0.05);
   padding: 10px;
+  border: 0.2px solid #ccc;
 }
 
 .taskbar {
@@ -378,11 +388,11 @@ body {
 }
 
 @media screen and (max-width: 1024px) {
-
   .main-container {
     margin-right: auto;
     margin-left: auto;
     height: auto;
+    padding: 10px;
   }
 
   .main-settings {
@@ -394,8 +404,10 @@ body {
     display: block !important;
   }
 
-  body {
+  body, html {
     overflow: auto;
+    margin: 0;
+    height: 100%;
   }
 
   .search-area,
@@ -429,9 +441,7 @@ body {
 }
 
 .mobile {
-  margin-top: 10px;
-  margin-left: 10px;
-  margin-right: 10px;
+  margin-bottom: 10px;
   display: none;
 }
 
@@ -443,28 +453,24 @@ body {
   background-color: #f1f3f4;
   color: black;
   transition: background-color .3s ease-out;
-  border: 0.2px #ccc solid;
 }
 
 .light-background-transparent {
   background-color: rgba(255, 255, 255, 0.3);
   color: black;
   transition: background-color .3s ease-out;
-  border: 0.2px #ccc solid;
 }
 
 .dark-background {
   background-color: #283142;
   color: white;
   transition: background-color .3s ease-out;
-  border: 0.2px #6f6f6f solid;
 }
 
 .dark-background-transparent {
-  background-color: rgba(0, 0, 0, 0.3);
+  background-color: #2831423f;
   color: white;
   transition: background-color .3s ease-out;
-  border: 0.2px #6f6f6f solid;
 }
 
 .m-1 {
@@ -610,9 +616,9 @@ body {
 }
 
 .action-bar {
-  border: none !important;
   box-shadow: rgba(33, 35, 38, 0.1) 0px 10px 10px -10px;
   transition: background-color 0.3s ease-in-out;
+  border-bottom: 0.2px solid #6f6f6f;
 }
 
 .drag-area {
@@ -627,7 +633,6 @@ body {
 
 .action-bar.dark-background {
   box-shadow: rgba(255, 255, 255, 0.334) 0px 10px 10px -10px;
-  border-bottom: 0.7px solid #ccc;
 }
 
 .action-buttons {
