--- a/src/styles.css
+++ b/src/styles.css
@@ -72,8 +72,21 @@ body {
     0 4px 4px hsl(0deg 0% 0% / 0.075),
     0 8px 8px hsl(0deg 0% 0% / 0.075),
     0 16px 16px hsl(0deg 0% 0% / 0.075); */
-    box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
-  border: 0.2px #6f6f6f solid;
+  /* box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px; */
+  box-shadow: rgba(0, 0, 0, 0.5) 0px 2px 24px 10px, rgba(0, 0, 0, 0.08) 0px 0px 0px 1px;
+  /* border: 0.2px #6f6f6f solid; */
+}
+
+.content.dark-background, .content.dark-background-transparent {
+  /* box-shadow:
+    0 1px 1px hsl(0deg 0% 0% / 0.075),
+    0 2px 2px hsl(0deg 0% 0% / 0.075),
+    0 4px 4px hsl(0deg 0% 0% / 0.075),
+    0 8px 8px hsl(0deg 0% 0% / 0.075),
+    0 16px 16px hsl(0deg 0% 0% / 0.075); */
+  /* box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px; */
+  box-shadow: rgba(255, 255, 255, 0.08) 0px 1px 30px 5px, rgba(255, 255, 255, 0.08) 0px 0px 0px 1px;
+  /* border: 0.2px #6f6f6f solid; */
 }
 
 .mobile-content {
@@ -83,11 +96,11 @@ body {
     0 4px 4px hsl(0deg 0% 0% / 0.075),
     0 8px 8px hsl(0deg 0% 0% / 0.075),
     0 16px 16px hsl(0deg 0% 0% / 0.075); */
-    box-shadow: rgba(14, 30, 37, 0.12) 0px 2px 4px 0px, rgba(14, 30, 37, 0.32) 0px 2px 16px 0px;
+  box-shadow: rgba(14, 30, 37, 0.12) 0px 2px 4px 0px, rgba(14, 30, 37, 0.32) 0px 2px 16px 0px;
 }
 
 .mobile-content.dark-background-transparent {
-  box-shadow: rgba(255, 255, 255, 0.205) 0px 2px 4px 0px, rgba(14, 30, 37, 0.32) 0px 2px 16px 0px;
+  box-shadow: rgba(255, 255, 255, 0.05) 0px 6px 24px 0px, rgba(255, 255, 255, 0.08) 0px 0px 0px 1px;
 }
 
 .window-content {
@@ -404,7 +417,7 @@ body {
     display: block !important;
   }
 
-  body, html {
+  body {
     overflow: auto;
     margin: 0;
     height: 100%;
@@ -895,7 +908,7 @@ body {
   cursor: pointer;
   padding: 0;
   /* box-shadow: inset 0 2px 4px 0 rgba(0, 0, 0, 0.05); */
-  box-shadow: 0 0 5px 0.5px rgba(0,0,0,0.2) inset;
+  box-shadow: 0 0 5px 0.5px rgba(0, 0, 0, 0.2) inset;
   transition: background-color 0.2s ease-in-out;
   position: relative;
 }
