--- a/src/styles.css
+++ b/src/styles.css
@@ -95,26 +95,24 @@ body {
 }
 
 .taskbar {
-  padding-left: 10px;
-  padding-right: 10px;
   display: flex;
-  justify-content: center;
-  width: 100%;
+  width: -webkit-fill-available;
   position: fixed;
   bottom: 10px;
   z-index: 1;
   height: 80px;
+  gap: 10px;
+  margin-left: 10px;
+  margin-right: 10px;
   transition: transform 0.3s ease-in-out;
 }
 
-.taskbar-content {
+.application-area {
   display: flex;
   align-items: center;
   align-content: center;
   justify-content: center;
-  margin-left: 10px;
-  margin-right: 10px;
-  border-radius: 20px;
+  border-radius: 12px;
   box-shadow: 0 0 40px 0 rgba(0, 0, 0, .45);
 }
 
@@ -606,9 +604,7 @@ body {
 }
 
 .action-bar {
-  box-shadow: rgba(33, 35, 38, 0.1) 0px 10px 10px -10px;
   transition: background-color 0.3s ease-in-out;
-  border-bottom: 0.2px solid #6f6f6f;
 }
 
 .drag-area {
@@ -648,7 +644,6 @@ body {
   min-height: 35px;
   background: none;
   border: none;
-  border-left: 0.7px solid #ccc;
 }
 
 .action-buttons>.action-icon:hover {
@@ -702,17 +697,20 @@ body {
   cursor: pointer;
 }
 
-.applications-area {
-  margin-left: 10px;
-  margin-right: 10px;
+.taskbar>.main, .taskbar>.weather-area, .taskbar>.time-calendar {
   display: flex;
+  gap: 10px;
+  border-radius: 12px;
+  flex-direction: row;
   align-items: center;
-  justify-content: center;
-  height: 100%;
+}
+
+.taskbar-space {
   width: 100%;
 }
 
-.applications-area>.application {
+.application-area>.application,
+.main>.application {
   position: relative;
   margin-left: 10px;
   height: 50px;
@@ -722,56 +720,30 @@ body {
   display: flex;
   align-items: center;
   justify-content: center;
-  /* -webkit-box-reflect: below 2px -webkit-gradient(linear, left top, left bottom, from(transparent),
-      color-stop(0.7, transparent), to(rgba(255, 255, 255, .5))); */
-  -webkit-transition: all 0.6s;
-  -webkit-transform-origin: 50% 100%;
+  transition: box-shadow 0.3s ease-in-out;
+  border-radius: 12px;
 }
 
 .application>img {
   width: 100%;
   height: 100%;
   z-index: 4;
-}
-
-.applications-area>.application:hover {
-  transform: scale(1.5);
-  -webkit-transform: scale(1.5);
-  margin: 0 1em;
-}
-
-.application-name {
-  display: none;
-  visibility: hidden;
-  opacity: 0;
-  position: absolute;
-  bottom: 110%;
-  left: 0;
-  width: 100%;
-  background-color: rgba(0, 0, 0, 0.75);
-  padding: 2px 0;
+  transition: box-shadow 0.6s ease-in-out;
   border-radius: 12px;
-  font-size: 6px;
-  text-align: center;
 }
 
-.applications-area>.application:hover>.application-name {
-  display: block;
-  color: #fff;
-  opacity: 1;
-  visibility: visible;
+.application-area>.application:hover {
+  box-shadow: 0px 0px 0px 5px rgba(50, 255, 153, 0.5);
+  cursor: pointer;
 }
 
-.application:hover+.application {
-  transform: scale(1.2);
-  -webkit-transform: scale(1.2);
-  margin: 0 0.5em;
+.main > .application:hover {
+  box-shadow: 0px 0px 10px 3px rgba(58, 51, 255, 0.7);
 }
 
-.application:has(+.application:hover) {
-  transform: scale(1.2);
-  -webkit-transform: scale(1.2);
-  margin: 0 0.5em;
+.main > .application {
+  cursor: pointer;
+  transition: box-shadow 0.3s ease-in-out;
 }
 
 .activating-app {
@@ -803,7 +775,6 @@ body {
   align-items: center;
   align-content: center;
   flex-direction: row-reverse;
-  width: 250px;
   padding-right: 10px;
   padding-left: 10px;
 }
@@ -986,21 +957,6 @@ body {
 .current-wallpaper {
   box-shadow: 0px 0px 0px 4px rgb(22 119 255);
   cursor: not-allowed;
-}
-
-.application-devider {
-  height: 70%;
-  margin-left: 10px;
-}
-
-.dark-background .application-devider,
-.dark-background-transparent .application-devider {
-  border-left: 1px solid #ccc;
-}
-
-.light-background .application-devider,
-.light-background-transparent .application-devider {
-  border-left: 1px solid #494949;
 }
 
 .setting-content {
@@ -1356,8 +1312,6 @@ body {
   margin-left: 10px;
 }
 
-.summary-content {}
-
 h1.summary-title {
   font-size: 15.5pt;
   font-family: "Calibri", sans-serif;
@@ -1403,4 +1357,15 @@ h1.summary-title {
 
 .action-bar-link:hover {
   color: #0871c6;
+}
+
+.weather{
+  overflow: hidden;
+  z-index: 10;
+  position: relative;
+  height: 80px;
+  width: 320px;
+  background-color: #f1712256;
+  border-radius: 10px;
+  box-shadow: 2px 2px 1px rgba(0,0,0,0.2);
 }
