--- a/src/styles.css
+++ b/src/styles.css
@@ -605,6 +605,32 @@ body {
 
 .action-bar {
   transition: background-color 0.3s ease-in-out;
+  position: relative;
+  /* box-shadow: rgba(0, 0, 0, 0.334) 0px 5px 5px -5px; */
+}
+
+.action-bar::before {
+  content: "";
+  position: absolute;
+  top: 100%;
+  left: 0;
+  height: 20px;
+  width: 20px;
+  border-top-left-radius: 12px;
+  background: #00000000;
+  box-shadow: 0 -5px 0 0 #ffffff6b;
+}
+
+.action-bar::after {
+  content: "";
+  position: absolute;
+  top: 100%;
+  right: 0;
+  height: 20px;
+  width: 20px;
+  border-top-right-radius: 12px;
+  background: #00000000;
+  box-shadow: 10px 0 0 0 #ffffff6b;
 }
 
 .drag-area {
@@ -620,10 +646,6 @@ body {
   -webkit-line-clamp: 1;
   -webkit-box-orient: vertical;
   white-space: nowrap;
-}
-
-.action-bar.dark-background {
-  box-shadow: rgba(255, 255, 255, 0.334) 0px 10px 10px -10px;
 }
 
 .action-buttons {
@@ -697,7 +719,9 @@ body {
   cursor: pointer;
 }
 
-.taskbar>.main, .taskbar>.weather-area, .taskbar>.time-calendar {
+.taskbar>.main,
+.taskbar>.weather-area,
+.taskbar>.time-calendar {
   display: flex;
   gap: 10px;
   border-radius: 12px;
@@ -737,11 +761,11 @@ body {
   cursor: pointer;
 }
 
-.main > .application:hover {
+.main>.application:hover {
   box-shadow: 0px 0px 10px 3px rgba(58, 51, 255, 0.7);
 }
 
-.main > .application {
+.main>.application {
   cursor: pointer;
   transition: box-shadow 0.3s ease-in-out;
 }
@@ -1359,13 +1383,10 @@ h1.summary-title {
   color: #0871c6;
 }
 
-.weather{
+.weather {
   overflow: hidden;
-  z-index: 10;
   position: relative;
   height: 80px;
   width: 320px;
-  background-color: #f1712256;
-  border-radius: 10px;
-  box-shadow: 2px 2px 1px rgba(0,0,0,0.2);
+  border-radius: 12px;
 }
