update check for all resources should be loaded

--- a/src/styles.css
+++ b/src/styles.css
@@ -706,7 +706,7 @@ body {
 .taskbar>.weather-area,
 .taskbar>.time-calendar {
   display: flex;
-  gap: 10px;
+  gap: 3px;
   border-radius: 30px;
   flex-direction: row;
   align-items: center;
@@ -806,6 +806,7 @@ body {
 
 .date-and-time {
   font-weight: bold;
+  font-size: 12.5px;
   height: 40px;
   display: flex;
   justify-content: center;
