--- a/src/styles.css
+++ b/src/styles.css
@@ -737,7 +737,8 @@ body {
 }
 
 .application-area>.application:hover {
-
+  background-color: #bfbfbfa9;
+  box-shadow: 0px 0px 0px 3px #bfbfbf;
   cursor: pointer;
 }
 
@@ -765,6 +766,7 @@ body {
 
 .application-area>.application.opened-app {
   box-shadow: 0px 0px 0px 3px rgb(22 119 255);
+  background-color: rgba(40, 130, 255, 0.462);
 }
 
 .tool-area {
