--- a/src/styles.css
+++ b/src/styles.css
@@ -1615,7 +1615,7 @@ h1.summary-title {
 }
 
 .quick-setting-name {
-  font-size: 11px;
+  font-size: 9px;
   font-weight: 600;
 }
 
@@ -1712,6 +1712,7 @@ h1.summary-title {
 .time-and-battery {
   width: 100%;
   display: flex;
+  height: 30px;
 }
 
 .battery-status {
@@ -1739,6 +1740,7 @@ h1.summary-title {
   font-size: 14px;
   font-weight: bold;
   gap: 10px;
+  align-items: center;
 }
 
 .point {
