--- a/src/styles.css
+++ b/src/styles.css
@@ -1522,6 +1522,7 @@ h1.summary-title {
   flex-direction: column;
   align-items: center;
   gap: 10px;
+  box-shadow: rgba(17, 17, 26, 0.05) 0px 1px 0px, rgba(17, 17, 26, 0.1) 0px 0px 8px;
 }
 
 .quick-settings.opened {
