--- a/src/styles.css
+++ b/src/styles.css
@@ -1749,3 +1749,25 @@ h1.summary-title {
   display: flex;
   align-items: center;
 }
+
+.night-light {
+  width: 100%;
+  height: 100%;
+  background-color: #4750189b;
+  position: absolute;
+  top: 0;
+  left: 0;
+  z-index: 1000;
+  pointer-events: none;
+  transition: visibility 0.5s ease-in-out, opacity 0.5s ease-in-out;
+}
+
+.night-light.off {
+  visibility: hidden;
+  opacity: 0;
+}
+
+.night-light.on {
+  visibility: visible;
+  opacity: 1;
+}
