--- a/src/styles.css
+++ b/src/styles.css
@@ -1762,6 +1762,16 @@ h1.summary-title {
   transition: visibility 0.5s ease-in-out, opacity 0.5s ease-in-out;
 }
 
+.brightness {
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  top: 0;
+  left: 0;
+  z-index: 1001;
+  pointer-events: none;
+}
+
 .night-light.off {
   visibility: hidden;
   opacity: 0;
