--- a/src/styles.css
+++ b/src/styles.css
@@ -783,7 +783,7 @@ body {
   position: relative;
 }
 
-.notifications {
+.notification-tile {
   width: 40px;
   display: flex;
   height: 40px;
@@ -792,9 +792,32 @@ body {
   margin-right: 10px;
   border-radius: 30px;
   transition: background-color 0.2s ease-in-out 0s;
+  position: relative;
 }
 
-.notifications:hover {
+.notification-badge {
+  position: absolute;
+  top: 0;
+  right: 0;
+  width: 12px;
+  height: 12px;
+  border-radius: 50%;
+  background-color: red;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: row;
+  font-size: 10px;
+  font-weight: 700;
+  color: white;
+  padding: 3px;
+}
+
+.notification-tile.opened {
+  background-color: #cccccca3;
+}
+
+.notification-tile:hover {
   background-color: #cccccca3;
 }
 
@@ -1509,6 +1532,175 @@ h1.summary-title {
   }
 }
 
+.notifications {
+  position: absolute;
+  bottom: 80px;
+  right: 10px;
+  width: 300px;
+  height: 600px;
+  z-index: 19;
+  padding: 10px;
+  display: flex;
+  flex-wrap: nowrap;
+  flex-direction: column;
+  align-items: center;
+  gap: 10px;
+  box-shadow: rgba(17, 17, 26, 0.05) 0px 1px 0px, rgba(17, 17, 26, 0.1) 0px 0px 8px;
+}
+
+.notifications.opened {
+  visibility: visible;
+  opacity: 1;
+  animation: openQuickSetting 0.3s ease-in-out;
+  transition: transform 0.3s ease-in-out, visibility 0.3s ease-in-out, opacity 0.3s ease-in-out;
+}
+
+.notifications.closed {
+  visibility: hidden;
+  opacity: 0;
+  animation: closeQuickSetting 0.3s ease-in-out;
+  transition: transform 0.3s ease-in-out, visibility 0.3s ease-in-out, opacity 0.3s ease-in-out;
+}
+
+.notification-header {
+  display: flex;
+  width: 100%;
+  flex-wrap: nowrap;
+  align-items: center;
+}
+
+.notification-title {
+  width: 100%;
+  font-size: 16px;
+  font-weight: bold;
+}
+
+.notification-time {
+  width: 100%;
+  display: flex;
+  flex-wrap: nowrap;
+  align-items: center;
+}
+
+.close-notification-icon {
+  min-width: 20px;
+  min-height: 20px;
+  border-radius: 50%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-wrap: nowrap;
+  transition: background-color 0.3s linear;
+}
+
+.close-notification-icon:hover {
+  background-color: #f0555c;
+}
+
+.time-content {
+  font-size: 14px;
+  font-weight: bold;
+  width: 100%;
+}
+
+.notification-actions {
+  display: flex;
+  width: 100px;
+  flex-wrap: nowrap;
+  align-items: center;
+  gap: 10px;
+}
+
+.notification-action {
+  width: 40px;
+  height: 40px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border-radius: 50%;
+  cursor: pointer;
+  position: relative;
+}
+
+.notification-action:hover {
+  background-color: #cccccccd;
+}
+
+.disturb-tooltip {
+  visibility: hidden;
+  opacity: 0;
+  position: absolute;
+  bottom: 140%;
+  padding: 10px;
+  min-width: 100px;
+  right: -60px;
+  text-align: center;
+  transition: all 0.3s linear 0s;
+}
+
+.clear-all-tooltip {
+  visibility: hidden;
+  opacity: 0;
+  position: absolute;
+  bottom: 140%;
+  padding: 10px;
+  min-width: 100px;
+  right: -10px;
+  text-align: center;
+  transition: all 0.3s linear 0s;
+}
+
+.notification-action:hover>.disturb-tooltip {
+  visibility: visible;
+  opacity: 1;
+}
+
+.notification-action:hover>.clear-all-tooltip {
+  visibility: visible;
+  opacity: 1;
+}
+
+.notification-action.active {
+  background-color: rgb(22 119 255);
+}
+
+.notification-panel {
+  max-width: 300px;
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  gap: 5px;
+  align-items: center;
+  overflow-y: auto;
+  overflow-x: hidden;
+}
+
+.notification {
+  display: flex;
+  flex-direction: column;
+  padding: 10px;
+  max-width: 280px;
+  width: 100%;
+  gap: 10px;
+  cursor: pointer;
+  max-height: 500px;
+  transition: max-height 0.3s ease-out;
+}
+
+.notification.closed {
+  max-height: 0;
+  opacity: 0;
+  padding: 0;
+  margin: 0;
+  transition: max-height 0.3s ease-out, opacity 0.3s ease-in-out, padding 0.3s ease-in-out, margin 0.3s ease-in-out;
+  overflow: hidden;
+}
+
+.notification-description {
+  margin-top: 5px;
+  font-size: 14px;
+}
+
 .quick-settings {
   position: absolute;
   bottom: 80px;
@@ -1541,6 +1733,18 @@ h1.summary-title {
 
 .tool-area.opened {
   background-color: #cccccca3;
+}
+
+@keyframes closeNotification {
+  0% {
+    transform: scale(1);
+  }
+
+  100% {
+    transform: scale(0);
+    opacity: 0;
+    display: none;
+  }
 }
 
 @keyframes openQuickSetting {
@@ -1595,7 +1799,7 @@ h1.summary-title {
 }
 
 .quick-setting-icon.turned-on {
-  background-color: #0871c6;
+  background-color: rgb(22 119 255);
 }
 
 .light-background.quick-setting-icon {
