--- a/src/styles.css
+++ b/src/styles.css
@@ -1620,10 +1620,11 @@ h1.summary-title {
   border-radius: 50%;
   cursor: pointer;
   position: relative;
+  transition: background-color 0.3s linear;
 }
 
 .notification-action:hover {
-  background-color: #cccccccd;
+  background-color: #cccccccd !important;
 }
 
 .disturb-tooltip {
@@ -1661,7 +1662,7 @@ h1.summary-title {
 }
 
 .notification-action.active {
-  background-color: rgb(22 119 255);
+  background-color: rgb(22 119 255) !important;
 }
 
 .notification-panel {
@@ -1799,7 +1800,7 @@ h1.summary-title {
 }
 
 .quick-setting-icon.turned-on {
-  background-color: rgb(22 119 255);
+  background-color: rgb(22 119 255) !important;
 }
 
 .light-background.quick-setting-icon {
@@ -1807,7 +1808,7 @@ h1.summary-title {
 }
 
 .dark-background.quick-setting-icon {
-  background-color: #000000;
+  background-color: #3c3c3c;
 }
 
 .quick-setting-icon>svg {
